--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@
 /* header section */
 
 nav,
-.banner {
+.banner,
+main {
   padding: 0 240px;
 }
 
@@ -87,7 +88,7 @@ nav {
 }
 
 .fill-img {
-  position: fixed;
+  position: absolute;
   height: 661px;
 }
 
@@ -139,4 +140,95 @@ nav {
 }
 .b-content .two {
   background-color: #4ec5f7;
+}
+
+/* games section styling */
+
+.games {
+  margin-top: 120px;
+}
+.g-content {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.g-content h2 {
+  color: #0b0223;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.g-content h2 span {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.hover > img {
+  width: 342px;
+  height: 400px;
+  border-radius: 1rem;
+  margin-bottom: 1.5rem;
+}
+.hover {
+  position: relative;
+  background: black;
+  height: 82%;
+  width: 96%;
+  border-radius: 1rem;
+}
+
+.hover p {
+  padding-top: 1rem;
+}
+
+.center-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000a1;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.center-content img {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+}
+.center-content a {
+  text-decoration: none;
+  color: #ff42a5;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.center-content:hover .hover > img {
+  outline: 2px solid #fff;
+}
+
+.hover:hover .center-content {
+  opacity: 1;
+}
+
+.card p {
+  max-width: 342px;
+  color: #534c64;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
 }
