--- a/styles/style.css
+++ b/styles/style.css
@@ -208,6 +208,7 @@ nav {
   width: 3rem;
   height: 3rem;
   cursor: pointer;
+  margin-bottom: 1rem;
 }
 .center-content a {
   text-decoration: none;
@@ -231,4 +232,55 @@ nav {
   font-size: 20px;
   font-weight: 500;
   line-height: 30px;
+}
+
+/* button games */
+.buttons {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ff42a508;
+}
+
+.grid-container-one {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.grid-container-two {
+  display: flex;
+  justify-content: space-around;
+}
+
+.button-container button {
+  width: fit-content;
+  height: 80px;
+  background: #fff;
+  border-radius: 50px;
+  border: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px 10px 10px;
+  margin-bottom: 1.5rem;
+}
+.button-container button:hover {
+  outline: 1px solid #ff42a5;
+  border-radius: 50px;
+}
+.grid-container-one button:nth-child(4) {
+  width: 300px;
+}
+.grid-container-two button:nth-child(9) {
+  width: 262px;
+}
+.button-container button img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.button-container button p {
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
 }
