complete responsive for nav and banner

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 
 nav,
 .banner,
-main {
+.games {
   padding: 0 240px;
 }
 
@@ -236,8 +236,7 @@ nav {
 
 /* button games */
 .buttons {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding: 5rem 232px;
   background-color: #ff42a508;
 }
 
@@ -248,9 +247,13 @@ nav {
 
 .grid-container-two {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  margin: auto 54px;
+  justify-content: center;
 }
-
+.grid-container-two button {
+  margin-left: 2rem;
+}
 .button-container button {
   width: fit-content;
   height: 80px;
