--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Poppins:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Poppins:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap"); */
 
 /* shared style */
 
@@ -8,12 +8,13 @@
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
 }
+body {
+  width: 100%;
+}
 
-/* header section */
+/* header */
 
-nav,
-.banner,
-.games {
+nav {
   padding: 0 240px;
 }
 
@@ -92,7 +93,9 @@ nav {
   height: 661px;
 }
 
+/* banner styling */
 .banner {
+  padding: 0 240px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -146,6 +149,7 @@ nav {
 
 .games {
   margin-top: 120px;
+  padding: 0 240px;
 }
 .g-content {
   text-align: center;
@@ -170,27 +174,22 @@ nav {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
-
+.hover {
+  position: relative;
+  background: black;
+  width: 342px;
+  height: 400px;
+  border-radius: 1rem;
+}
 .hover > img {
   width: 342px;
   height: 400px;
   border-radius: 1rem;
   margin-bottom: 1.5rem;
 }
-.hover {
-  position: relative;
-  background: black;
-  height: 82%;
-  width: 96%;
-  border-radius: 1rem;
-}
-
-.hover p {
-  padding-top: 1rem;
-}
-
 .center-content {
   position: absolute;
+  border: 4px solid #f948b2;
   top: 0;
   left: 0;
   width: 100%;
@@ -204,6 +203,11 @@ nav {
   opacity: 0;
   transition: opacity 0.3s ease;
 }
+
+.card p {
+  padding-top: 1rem;
+}
+
 .center-content img {
   width: 3rem;
   height: 3rem;
@@ -234,6 +238,8 @@ nav {
   line-height: 30px;
 }
 
+/* games section styling */
+
 /* button games */
 .buttons {
   padding: 5rem 232px;
@@ -247,10 +253,17 @@ nav {
 
 .grid-container-two {
   display: flex;
-  /* justify-content: space-around; */
   margin: auto 54px;
   justify-content: center;
 }
+
+.hidden-grid-container {
+  display: none;
+  justify-content: space-around;
+  margin: auto 54px;
+  justify-content: center;
+}
+
 .grid-container-two button {
   margin-left: 2rem;
 }
