--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Poppins:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&family=Poppins:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700;800&display=swap");
 
 /* shared style */
 
@@ -99,6 +99,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-image: url("../images/group-14.png");
+  background-repeat: no-repeat;
+  background-position-x: left;
 }
 
 .b-content h2 {
@@ -238,7 +241,49 @@ nav {
   line-height: 30px;
 }
 
-/* games section styling */
+/* play now section styling */
+.play-now {
+  margin: 6rem auto;
+  padding: 0 240px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.p-content {
+  margin-left: auto;
+  padding-right: inherit;
+}
+.p-content h2 {
+  text-align: right;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px;
+  max-width: 341px;
+}
+.p-content h2 span {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.p-content p {
+  color: #534c64;
+  text-align: right;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  max-width: 353px;
+}
+.p-image {
+  position: relative;
+}
+.p-image img:last-child {
+  position: absolute;
+  position: absolute;
+  bottom: -74px;
+  left: -148px;
+}
 
 /* button games */
 .buttons {
@@ -268,6 +313,9 @@ nav {
   margin-left: 2rem;
 }
 .button-container button {
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
   width: fit-content;
   height: 80px;
   background: #fff;
@@ -281,24 +329,15 @@ nav {
 }
 .button-container button:hover {
   outline: 1px solid #ff42a5;
+  color: #ff42a5;
   border-radius: 50px;
 }
-.grid-container-one button:nth-child(4) {
-  width: 300px;
-}
-.grid-container-two button:nth-child(9) {
-  width: 262px;
-}
+
 .button-container button img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin-right: 1rem;
-}
-.button-container button p {
-  color: #0b0223;
-  font-size: 20px;
-  font-weight: 600;
 }
 
 /* footer section styling */
@@ -353,9 +392,12 @@ footer .title h3 span {
   grid-template-columns: repeat(6, 1fr);
   gap: 40px;
 }
-.social-img img {
+.social-img .social-btn {
   height: 40px;
-  margin-bottom: 74px;
+  margin-bottom: 2rem;
+  background-color: black;
+  border: none;
+  cursor: pointer;
 }
 .footer-policy {
   display: grid;
